// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

import "repr/src/antichain.proto";
import "repr/src/global_id.proto";
import "repr/src/relation_and_scalar.proto";
import "storage/src/controller.proto";
import "storage/src/types/connections.proto";

package mz_storage.types.sinks;

message ProtoStorageSinkDesc {
    mz_repr.global_id.ProtoGlobalId from = 1;
    mz_repr.relation_and_scalar.ProtoRelationDesc from_desc = 2;
    ProtoStorageSinkConnection connection = 3;
    optional ProtoSinkEnvelope envelope = 4;
    ProtoSinkAsOf as_of = 5;
    optional mz_storage.controller.ProtoCollectionMetadata from_storage_metadata = 6;
    optional string status_id = 7;
}

message ProtoSinkEnvelope {
    oneof kind {
        google.protobuf.Empty debezium = 1;
        google.protobuf.Empty upsert = 2;
    }
}

message ProtoStorageSinkConnection {
    oneof kind {
        ProtoKafkaSinkConnection kafka = 1;
    }
}

message ProtoKafkaSinkProgressConnection {
    string topic = 1;
    // int32 schema_id = 2;
    reserved 2;
}

message ProtoSinkAsOf {
    mz_repr.antichain.ProtoU64Antichain frontier = 1;
    bool strict = 2;
}

message ProtoKafkaSinkConnection {
    message ProtoKeyDescAndIndices {
        mz_repr.relation_and_scalar.ProtoRelationDesc desc = 1;
        repeated uint64 indices = 2;
    }

    message ProtoRelationKeyIndicesVec {
        repeated uint64 relation_key_indices = 1;
    }

    reserved 3, 9, 10;

    mz_repr.global_id.ProtoGlobalId connection_id = 13;
    mz_storage.types.connections.ProtoKafkaConnection connection = 1;
    string topic = 2;
    optional ProtoKeyDescAndIndices key_desc_and_indices = 4;
    optional ProtoRelationKeyIndicesVec relation_key_indices = 5;
    mz_repr.relation_and_scalar.ProtoRelationDesc value_desc = 6;
    optional ProtoPublishedSchemaInfo published_schema_info = 7;
    ProtoKafkaSinkProgressConnection progress = 8;
    uint64 fuel = 11;
    map<string, mz_storage.types.connections.ProtoStringOrSecret> options = 12;
}

message ProtoPublishedSchemaInfo {
    optional int32 key_schema_id = 1;
    int32 value_schema_id = 2;
}

message ProtoPersistSinkConnection {
    mz_repr.relation_and_scalar.ProtoRelationDesc value_desc = 1;
    mz_storage.controller.ProtoCollectionMetadata storage_metadata = 2;
}

message ProtoDurableExportMetadata {
    // This message is persisted to disk. Changes must be backwards compatible.
    mz_storage.types.sinks.ProtoSinkAsOf initial_as_of = 1;
}
